Issue #DTW-4: Fixed wrong color definition

--- a/source/_base/_base.scss
+++ b/source/_base/_base.scss
@@ -3,8 +3,8 @@ html {
 }
 
 body {
-  background-color: color(white);
-  color: color(black);
+  background-color: $color-white;
+  color: $color-black;
   font: $font;
   height: 100%;
   margin: 0;
